--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   geocoding: ^3.0.0
   google_maps_flutter: ^2.10.0
+  http: ^0.13.1
   location: ^6.0.1
   permission_handler: ^11.3.1
 
